# slashless

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml
src/: auth.rs  cli.rs  config.rs  connection_pool.rs  encoding.rs  errors.rs  main.rs  models.rs  pool_manager.rs  redis_client.rs  routes.rs  server.rs
src/client/: mod.rs
src/command/: cli.rs  executor.rs  mod.rs
src/console/: banner.rs  console.rs  mod.rs  render.rs  state.rs  status.rs
src/handlers/: command.rs  mod.rs  pipeline.rs  transaction.rs
src/http/: routes.rs  server.rs
src/models/: mod.rs  models.rs
src/utils/: auth.rs  encoding.rs  errors.rs  mod.rs
tests/auth/: authentication.test.ts  authorization.test.ts
tests/hashes/: hdel.test.ts  hexists.test.ts  hget.test.ts  hgetall.test.ts  hincrby.test.ts  hkeys.test.ts  hlen.test.ts  hmget.test.ts  hset.test.ts  hsetnx.test.ts  hvals.test.ts
tests/helpers/: client.ts  fixtures.ts
tests/keys/: del.test.ts  exists.test.ts  expireat.test.ts  persist.test.ts  pexpire.test.ts  pttl.test.ts  rename.test.ts  renamenx.test.ts  ttl.test.ts  type.test.ts
tests/lists/: lindex.test.ts  linsert.test.ts  llen.test.ts  lpop.test.ts  lpush.test.ts  lrange.test.ts  lset.test.ts  ltrim.test.ts  rpop.test.ts  rpush.test.ts
tests/numeric/: decr.test.ts  decrby.test.ts  incr.test.ts  incrby.test.ts
tests/sets/: sadd.test.ts  scard.test.ts  sdiff.test.ts  sinter.test.ts  sismember.test.ts  smembers.test.ts  smove.test.ts  spop.test.ts  srandmember.test.ts  srem.test.ts  sunion.test.ts
tests/sorted-sets/: zadd.test.ts  (+9 more)
(+12 files in other folders)
