[package]
name = "stashless"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
rand = "0.8"
console = "0.15"
base64 = "0.21"
serde_urlencoded = "0.7"
dashmap = "5.5"

[dev-dependencies]
axum-test = "9.0"

[[bin]]
name = "stashless"
path = "src/main.rs"