[package]
name = "stashless"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "limit"] }
rand = "0.8"
console = "0.15"
base64 = "0.21"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
reqwest = "0.11"

[dev-dependencies]
axum-test = "9.0"

[[bin]]
name = "stashless"
path = "src/main.rs"